# moznods

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.trae/skills/ui-ux-specialist/: SKILL.md
apps/accounts/: admin.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/calls/: call_state.py  consumers.py
apps/chat/: admin.py  consumers.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/files/: admin.py  constants.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/rooms/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev_start.py  local.py  low_memory.py  production.py  test.py
core/: consumers.py  exceptions.py  models.py  permissions.py  utils.py  ws_auth.py
core/tests/: test_models.py
docs/: api.md  git-workflow.md  index.md  infrastructure.md  structure.md  tech.md  testing.md  user_guide.md  webrtc.md
frontend/: .env.production  Dockerfile  README.md  build-with-env.sh  index.html  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  config.ts  i18n.ts  index.css  main.tsx
plans/: 001-bugs-and-features.md  001-frontend-implementation.md  001-mvp-implementation.md  002-stage-2.md  tasks-junior.md  tasks-middle-ai.md  tasks-senior.md
requirements/: base.txt  local.txt  production.txt  requirements.txt  requirements_dev.txt
(+53 files in other folders)
